dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/ltng_FieldSetListDemoBase__c.object-meta.xml
<CustomObject>
    <description>Base object for the FieldSet List Demos</description>
    <label>FieldSet List Demo Base</label>
    <nameField>
        <label>FSL DemoBase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldSet List Demo Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>