dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>Billing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ltng_ExampleFieldSetDemoStates</valueSetName>
    </valueSet>
</CustomField>