dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>