dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ExampleCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Example Checkbox</label>
    <type>Checkbox</type>
</CustomField>