dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleDate__c.field-meta.xml
<CustomField>
    <fullName>ExampleDate__c</fullName>
    <label>Example Date</label>
    <type>Date</type>
</CustomField>