dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleFormula__c.field-meta.xml
<CustomField>
    <fullName>ExampleFormula__c</fullName>
    <formula>"Hello User: " + $User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Example Formula</label>
    <type>Text</type>
</CustomField>