dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleLongText__c.field-meta.xml
<CustomField>
    <fullName>ExampleLongText__c</fullName>
    <label>Example LongText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>