dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleNumber__c.field-meta.xml
<CustomField>
    <fullName>ExampleNumber__c</fullName>
    <label>Example Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>