dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExamplePicklist__c.field-meta.xml
<CustomField>
    <fullName>ExamplePicklist__c</fullName>
    <label>Example Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ltng_ExampleFieldSetDemoStates</valueSetName>
    </valueSet>
</CustomField>