dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleRichText__c.field-meta.xml
<CustomField>
    <fullName>ExampleRichText__c</fullName>
    <label>Example RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>