dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleText__c.field-meta.xml
<CustomField>
    <fullName>ExampleText__c</fullName>
    <label>Example Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>