dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ExampleTextArea__c.field-meta.xml
<CustomField>
    <fullName>ExampleTextArea__c</fullName>
    <label>Example TextArea</label>
    <type>TextArea</type>
</CustomField>