dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>