dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/RequiredFieldByLayout__c.field-meta.xml
<CustomField>
    <fullName>RequiredFieldByLayout__c</fullName>
    <inlineHelpText>This field is required within the FieldSet/Page Layout (not at the object)</inlineHelpText>
    <label>Required Field by Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>