dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/RequiredFieldByObject__c.field-meta.xml
<CustomField>
    <fullName>RequiredFieldByObject__c</fullName>
    <inlineHelpText>This field is required at the object (not at the fieldset level)</inlineHelpText>
    <label>Required Field by Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>