dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>Shipping Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>