dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A - Master</fullName>
            </value>
            <value>
                <fullName>Type A - Variant</fullName>
            </value>
            <value>
                <fullName>Type B - Master</fullName>
            </value>
            <value>
                <fullName>Type B - Variant</fullName>
            </value>
            <value>
                <fullName>Type C - Master</fullName>
            </value>
            <value>
                <fullName>Type C - Variant</fullName>
            </value>
            <value>
                <fullName>Type D - Master</fullName>
            </value>
            <value>
                <fullName>Type D - Variant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>