dx/force-app/main/default/objects/ltng_FieldSetListDemoBase__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
                <default>true</default>
                <label>Type A</label>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type C</fullName>
            </value>
            <value>
                <fullName>Type D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>